--- a/backend/web/css/site.css
+++ b/backend/web/css/site.css
@@ -2,7 +2,17 @@ html,
 body {
     height: 100%;
 }
-
+#window_progress {
+    background: url("../images/app_images/circle-loading-animation.gif") no-repeat scroll center center transparent;
+    color: transparent;
+    display: none;
+    height: 100px;
+    left: 48%;
+    position: fixed;
+    top: 45%;
+    width: 100px;
+    z-index: 999999;
+}
 .wrap {
     min-height: 100%;
     height: auto;
